<resources>
    <string name="app_name">ImagenGit</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonPause">Pause</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonCambiar">Remix</string>
    <string name="cancion1">Nombre 1</string>
    <string name="cancion2">Nombre 2</string>
    <string name="cancion3">Nombre 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grabando">Recording</string>
    <string name="error">ERROR!</string>
    <string name="reproduciendo">Reproduciendo</string>
    <string name="parando">Parando...</string>
    <string name="buttonAnterior">Anterior</string>
    <string name="ButtonSiguiente">Siguiente</string>
    <string name="btnPlay">Play</string>
    <string name="btnPause">Pause</string>
    <string name="btnStop">Stop</string>
    <string name="btnAnterior">Anterior</string>
    <string name="btnSiguiente">Siguiente</string>

</resources>